firefox/.mozilla/firefox/4j7syukk.default-release/chrome/userChrome.css
/* -------------- */
/* Root variables */
/* -------------- */

:root {
  --accent-color: #54a87b;
  --border-radius: 4px;
  --one-line-size: 40px;
  --one-line-padding: 4px;
  --toolbar-non-lwt-bgimage: !important;
}

/* ------- */
/* Nav bar */
/* ------- */

#nav-bar {
  background: --toolbar-bgcolor !important;
  box-shadow: none !important;
}

/* Forward/back buttons */
#forward-button,
#back-button {
  display: none !important;
}

/* Account button */
#fxa-toolbar-menu-button {
  display: none !important;
}

/* Bookmarks button */
#bookmarks-menu-button {
  display: none !important;
}

/* Reload button */
#stop-reload-button {
  display: none !important;
}

/* Overflow button */
#nav-bar-overflow-button {
  display: none !important;
}

/* Container for some buttons on the far right of the bar */
#PanelUI-button {
  display: none !important;
}

/* ------- */
/* URL bar */
/* ------- */

/* URL bar container */
#urlbar-container {
  margin-inline-end: 0px !important;
  margin-inline-start: 0px !important;
  padding-block: 0px !important;
}

/* URL bar */
#urlbar {
  border-radius: var(--border-radius) 0 0 0 !important;
}

/* Inner URL bar container */
#urlbar-input-container {
  border-radius: var(--border-radius) 0 0 0 !important;
}

/* Actions button */
#pageActionButton {
  display: none !important;
}

/* URLs in the dropdown */
.urlbarView-url:not([selected="true"]),
.urlbarView-action:not([selected="true"]) {
  color: var(--toolbar-non-lwt-textcolor) !important;
}

/* ---- */
/* Tabs */
/* ---- */

/*  Tab loading animation in tab */
.tab-throbber {
  filter: grayscale(100%);
}

/* Tab loading burst animation */
.tab-loading-burst {
  display: none !important;
}

/* Tab dividers */
.tabbrowser-tab::before,
.tabbrowser-tab::after {
  display: none !important;
}

/* Dropdown menu that appears when lots of tabs are open */
#TabsToolbar .toolbarbutton-1 {
  display: none;
}

/* Scroll buttons that appear when lots of tabs are open */
toolbarbutton.scrollbutton-up,
toolbarbutton.scrollbutton-down {
  display: none;
}

/* Tab top border */
:root:not([tabsintitlebar]) .tab-background {
  border-top-style: none !important;
}

/* Tab-close button */
.tab-close-button {
  display: none !important;
}

/* -------- */
/* Menu bar */
/* -------- */

/* Dropdown menu headers */
#main-menubar {
  background: -moz-dialog !important;
}

/* The free space on the right of the bar */
#toolbar-menubar spacer {
  background: -moz-dialog !important;
}

/* ----------- */
/* Find dialog */
/* ----------- */

/* Highlight all, match case, whole words buttons */
.findbar-button:-moz-any([checked="true"], :hover:active):not([disabled="true"]) {
  background-color: var(--accent-color) !important;
  color: white !important;
}

/* Next/previous buttons */
.browserContainer > findbar .findbar-find-previous:active:not([disabled]), .browserContainer > findbar .findbar-find-next:active:not([disabled]) {
  background-color: var(--accent-color) !important;
}

/* Text box */
.findbar-textbox:focus:not([status="notfound"]) {
  background-color: -moz-Field !important;
  color: var(--lwt-toolbar-field-color) !important;
}

/* Outline when button has been clicked */
findbar toolbarbutton.tabbable:-moz-focusring {
  outline: none !important;
}

/* ------------- */
/* Miscellaneous */
/* ------------- */


/* -------------- */
/* One line theme */
/* -------------- */

#TabsToolbar {
  margin-left: 38vw !important;
}

#nav-bar {
  margin-right: 62vw !important;
  margin-top: calc(-1 * var(--one-line-size)) !important;
  padding: var(--one-line-padding) !important;
}

#urlbar-container {
  min-width: 1px !important;
}

#urlbar {
  height: calc(var(--one-line-size) - calc(var(--one-line-padding) * 2)) !important;
}

#tabbrowser-tabs {
  min-height: 1px !important;
}

.tabbrowser-arrowscrollbox {
  min-height: 1px !important;
}

.tab-stack {
  height: var(--one-line-size) !important;
}

/* Ensure icons are the full height of the URL bar */
.urlbar-icon {
  height: 999px !important;
}

